Develop (#63)
* Feat/users (#60)

* feat: implement user authentication and authorization features

* feat: refactor user address handling to enforce single address requirement

* feat: rename Address to Addresses and update related components for consistency

* Feat/users (#62)

* feat: implement user authentication and authorization features

* feat: refactor user address handling to enforce single address requirement

* feat: rename Address to Addresses and update related components for consistency

* feat: implement user address validation and retrieval use cases

* feat: enhance restaurant and menu item use cases to include user authentication and ownership validation

* feat: implement user-based ownership validation for restaurants and menu items

* feat: implement user-based ownership validation for restaurants and menu items

* feat: enhance restaurant use cases to include address management and retrieval

* feat: update restaurant model to include description and address fields, and refactor related use cases

* feat: updated usecase menuitem

* feat: compila

* docs: update README with project description, technologies, architecture, and execution instructions

* refactor: update RestaurantMapper to correct mapping for isActive and remove unused mappings

* feat: enhance RestaurantMapper and UserMapper to include isActive mapping and address handling